--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Slider>
 @{
     ViewData["Title"] = "Index";
     Layout = null;
@@ -110,7 +110,7 @@
     </header>
     <!-- Header Area End -->
     <!-- Background Area Start -->
-    <section id="slider-container" class="slider-area">
+ <section id="slider-container" class="slider-area">
         <div class="slider-owl owl-theme owl-carousel">
             <!-- Start Slingle Slide -->
             <div class="single-slide item" style="background-image: url(assets/img/slider/slider1.jpg)">
