--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -64,7 +64,7 @@
                         <ul>
                             <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
                             <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                            <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
+                            <li><a asp-controller="TeacherProperties" asp-action="Index"><i class="zmdi zmdi-vimeo"></i></a></li>
                             <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
                         </ul>
                     </div>
