--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -53,36 +53,20 @@
                                 <nav>
                                     <ul>
                                         <li>
-                                            <a href="index.html">Home</a>
-                                            <ul>
-                                                <li><a href="index.html">Home One</a></li>
-                                                <li><a href="index-2.html">Home Two</a></li>
-                                                <li><a href="index-3.html">Home Three</a></li>
-                                                <li><a href="index-4.html">Home Four</a></li>
-                                                <li><a href="index-5.html">Home Five</a></li>
-                                            </ul>
+                                            <a asp-action="index" asp-controller="home">Home</a>
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a asp-action="index" asp-controller="about">About</a></li>
                                         <li>
-                                            <a href="course.html">courses</a>
+                                            <a asp-action="index" asp-controller="course">Courses</a>
+                                        </li>
+                                        <li>
                                             <ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
+                                                <a asp-action="detail" asp-controller="course">Courses details</a>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="event.html">event</a>
-                                            <ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="hidden-sm">
-                                            <a href="teacher.html">teacher</a>
-                                            <ul>
-                                                <li><a href="teacher.html">teacher</a></li>
+                                            <a asp-action="index" asp-controller="teacher">Teachers</a>
+                                                </li>
                                                 <li><a href="teacher-details.html">teacher details</a></li>
                                             </ul>
                                         </li>
